--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -40,7 +40,8 @@
             android:textSize="14dp"
             android:textStyle="bold"
             android:paddingLeft="20dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_marginTop="20dp"/>
         <TextView
             android:id="@+id/hasil_gender"
             android:layout_width="wrap_content"
