--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".Auth.SignUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +36,6 @@
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:hint="username"
-                android:inputType="textPassword"
                 android:drawablePadding="8dp"/>
 
             <EditText
@@ -47,7 +46,6 @@
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:hint="password"
-                android:inputType="textPassword"
                 android:drawablePadding="8dp"/>
             <EditText
                 android:layout_width="350dp"
@@ -57,9 +55,7 @@
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
                 android:hint="nama"
-                android:inputType="textPassword"
                 android:drawablePadding="8dp"/>
-
             <Button
                 android:layout_width="350dp"
                 android:layout_height="70dp"
