--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -59,12 +59,11 @@
                 android:drawableTint="@color/colorMedium"
                 android:drawablePadding="16dp"
                 android:layout_marginTop="35dp"
-                android:textSize="21dp"/>
+                android:textSize="18dp"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:layout_marginTop="20dp"
-                android:padding="0dp"
                 app:startIconDrawable="@drawable/baseline_lock_24"
                 app:startIconTint="@color/colorMedium"
                 app:endIconMode="password_toggle"
@@ -90,10 +89,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/custom_button"
                 android:padding="15dp"
                 android:text="Masuk"
-                android:textColor="@color/colorMedium"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:textStyle="bold"/>
         </LinearLayout>
