--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,7 +57,7 @@
                 android:hint="nama"
                 android:drawablePadding="8dp"/>
             <Button
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:text="Sign Up"
                 android:id="@+id/signup_button"
