--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -39,7 +39,7 @@
                 android:drawableLeft="@drawable/baseline_logout_24"
                 android:drawableTint="@color/white"
                 android:text="Keluar"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="70dp"
                 android:textColor="@color/white"
                 android:textSize="16dp" />
         </LinearLayout>
@@ -71,14 +71,17 @@
                         android:gravity="center_vertical"
                         android:orientation="vertical">
                         <TextView
+                            android:id="@+id/studentName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Nama : Yohanes Krina Desantho"/>
                         <TextView
+                            android:id="@+id/studentClass"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Kelas : 4A"/>
                         <TextView
+                            android:id="@+id/studentNISN"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="NISN : 3471503626"/>
