--- a/app/src/main/res/layout/card_list_semester.xml
+++ b/app/src/main/res/layout/card_list_semester.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/cardSemester"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <androidx.cardview.widget.CardView
@@ -26,14 +27,17 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp">
                 <TextView
+                    android:id="@+id/thn_ajaran"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"
+                    android:text="Semester 1"
+                    android:textStyle="bold"/>
+                <TextView
                     android:id="@+id/idSemester"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Semester 1"/>
-                <TextView
-                    android:id="@+id/updateSemester"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
                     android:text="Di bagikan pada Desember 2021"/>
             </LinearLayout>
         </LinearLayout>
