desain splash screen, login, list item, dashboard, Bottom Nav

--- a/app/src/main/res/layout/activity_siswa.xml
+++ b/app/src/main/res/layout/activity_siswa.xml
@@ -143,12 +143,22 @@
         android:id="@+id/parent_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="109dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.06"
+        app:layout_constraintVertical_bias="0.044"
         tools:layout_editor_absoluteX="0dp">
 
     </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottomnavmenu"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
