--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorMedium">#00B0FF</color>
     <color name="colorMediumDark">#2E84D9</color>
     <color name="colorDark">#00B0FF</color>
+    <color name="grey">#808080</color>
+    <color name="white_grey">#E8E8E8</color>
 </resources>
