--- a/app/src/main/res/layout/activity_subjects.xml
+++ b/app/src/main/res/layout/activity_subjects.xml
@@ -6,400 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Students.SubjectsActivity">
-    <!--<androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/subject_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:padding="10dp"
-        tools:listitem="@layout/card_list_subjects"/>-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_ipas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_ipas"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="IPAS"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_ipas"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_bindo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/id_semester_bindo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Bahasa Indonesia"
-                        android:textSize="18dp" />
-                    <TextView
-                        android:id="@+id/value_subject_bindo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_mtk"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_mtk"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Matematika"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_mtk"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_musik"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_musik"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seni Musik"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_musik"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_tari"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_tari"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seni Tari"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_tari"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_rupa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_rupa"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seni Rupa"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_rupa"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_teater"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_teater"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Seni Teater"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_teater"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_pjok"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_pjok"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="PJOK"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_pjok"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/subject_inggris"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="5dp"
-            app:cardCornerRadius="17dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-                <LinearLayout
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/id_semester_inggris"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Bahasa Inggris"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:id="@+id/value_subject_inggris"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="90.00"
-                        android:textColor="@color/colorMediumDark"
-                        android:textSize="21dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_next"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
+        tools:listitem="@layout/card_list_subjects"/>
 </ScrollView>
